Fix overflow scrollbar bug

--- a/style.css
+++ b/style.css
@@ -139,16 +139,15 @@ body, html {
 .result {
     width: 100%;
     height: 100%;
-    overflow: scroll;
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-end;
     font-size: 70px;
     font-family: monospace;
+    overflow: auto;
 }
 
 .result-wrapper {
     width: 100%;
     height: 100%;
-    overflow-x: scroll;
 }
